drop old EditorNotificationProvider, and reimpl it via new api
new impl module